--- a/src/html/demo.ejs
+++ b/src/html/demo.ejs
@@ -5,22 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body {
-      margin: 0;
-    }
-    table {
-      border-collapse: collapse;
-      width: 600px;
-      margin: 0px auto 30px;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <% studentList.forEach(function (student) { %>
     <table border="1">
       <colgroup>
-        <col width="100"/>
+        <col width="500"/>
         <col/>
       </colgroup>
       <tr>
